# syft4golog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  test.ltlf
benchmarks/: gen_benchmarks_warehouse.py
benchmarks/blocksworld/: domain.pddl  golog1.golog  p02.pddl  p10.pddl  p11.pddl  p12.pddl  p13.pddl  p14.pddl  p15.pddl  p16.pddl  p17.pddl  p18.pddl  p19.pddl  p20.pddl  p3.pddl  p4.pddl  p5.pddl  p6.pddl  p7.pddl  p8.pddl  p9.pddl  prog_1_10.golog  prog_1_11.golog  prog_1_12.golog  prog_1_13.golog  prog_1_14.golog  prog_1_15.golog  prog_1_16.golog  prog_1_17.golog  prog_1_18.golog  prog_1_19.golog  prog_1_20.golog  prog_1_3.golog  prog_1_4.golog  prog_1_5.golog  prog_1_6.golog  prog_1_7.golog  prog_1_8.golog  prog_1_9.golog  prog_2_10.golog  (+35 more)
benchmarks/blocksworld_drop/: domain.pddl  p10.pddl  p11.pddl  p12.pddl  p13.pddl  p14.pddl  p15.pddl  p16.pddl  p17.pddl  p18.pddl  p19.pddl  p20.pddl  p3.pddl  p4.pddl  p5.pddl  p6.pddl  p7.pddl  p8.pddl  p9.pddl  prog_1_10.golog  prog_1_11.golog  prog_1_12.golog  prog_1_13.golog  prog_1_14.golog  prog_1_15.golog  prog_1_16.golog  prog_1_17.golog  prog_1_18.golog  prog_1_19.golog  prog_1_20.golog  prog_1_3.golog  prog_1_4.golog  prog_1_5.golog  prog_1_6.golog  prog_1_7.golog  prog_1_8.golog  prog_1_9.golog  prog_2_10.golog  prog_2_11.golog  prog_2_12.golog  (+33 more)
benchmarks/coffee/: domain.pddl  prog_1_2.golog
benchmarks/dishwasher/: domain_r1.pddl  domain_r2.pddl  domain_r3.pddl  domain_r4.pddl  domain_r5.pddl  p1_1.pddl  p1_2.pddl  p1_3.pddl  p1_4.pddl  p1_5.pddl  p2_1.pddl  p2_2.pddl  p2_3.pddl  p2_4.pddl  p2_5.pddl  p3_1.pddl  p3_2.pddl  p3_3.pddl  p3_4.pddl  p3_5.pddl  p4_1.pddl  p4_2.pddl  p4_3.pddl  p4_4.pddl  p4_5.pddl  p5_1.pddl  p5_2.pddl  p5_3.pddl  p5_4.pddl  p5_5.pddl  prog_1_1_1.golog  prog_1_1_2.golog  prog_1_1_3.golog  prog_1_1_4.golog  prog_1_1_5.golog  prog_1_2_1.golog  prog_1_2_2.golog  prog_1_2_3.golog  prog_1_2_4.golog  prog_1_2_5.golog  (+65 more)
benchmarks/dishwasher_final/: domain.pddl  p_r1_d1.pddl  p_r1_d10.pddl  p_r1_d2.pddl  p_r1_d3.pddl  p_r1_d4.pddl  p_r1_d5.pddl  p_r1_d6.pddl  p_r1_d7.pddl  p_r1_d8.pddl  p_r1_d9.pddl  p_r2_d1.pddl  p_r2_d10.pddl  p_r2_d2.pddl  p_r2_d3.pddl  p_r2_d4.pddl  p_r2_d5.pddl  p_r2_d6.pddl  p_r2_d7.pddl  p_r2_d8.pddl  p_r2_d9.pddl  p_r3_d1.pddl  p_r3_d10.pddl  p_r3_d2.pddl  p_r3_d3.pddl  p_r3_d4.pddl  p_r3_d5.pddl  p_r3_d6.pddl  p_r3_d7.pddl  p_r3_d8.pddl  p_r3_d9.pddl  p_r4_d1.pddl  p_r4_d10.pddl  p_r4_d2.pddl  p_r4_d3.pddl  p_r4_d4.pddl  p_r4_d5.pddl  p_r4_d6.pddl  p_r4_d7.pddl  p_r4_d8.pddl  (+141 more)
benchmarks/dishwasher_move/: domain_r1.pddl  domain_r2.pddl  domain_r3.pddl  domain_r4.pddl  domain_r5.pddl  p1_1.pddl  p1_2.pddl  p1_3.pddl  p1_4.pddl  p1_5.pddl  p2_1.pddl  p2_2.pddl  p2_3.pddl  p2_4.pddl  p2_5.pddl  p3_1.pddl  p3_2.pddl  p3_3.pddl  p3_4.pddl  p3_5.pddl  p4_1.pddl  p4_2.pddl  p4_3.pddl  p4_4.pddl  p4_5.pddl  p5_1.pddl  p5_2.pddl  p5_3.pddl  p5_4.pddl  p5_5.pddl  prog_1_1_1.golog  prog_1_1_2.golog  prog_1_1_3.golog  prog_1_1_4.golog  prog_1_1_5.golog  prog_1_2_1.golog  prog_1_2_2.golog  prog_1_2_3.golog  prog_1_2_4.golog  prog_1_2_5.golog  (+65 more)
benchmarks/gen_benchmarks/: gen_benchmarks_blocksworld.py  gen_benchmarks_blocksworld_drop.py  gen_benchmarks_blocksworld_leave.py  gen_benchmarks_coffee_line.py  gen_benchmarks_dishwasher.py  gen_benchmarks_dishwasher2.py  gen_benchmarks_dishwasher_final.py  gen_benchmarks_dishwasher_move.py  gen_benchmarks_tireworld.py  gen_benchmarks_tireworld_carry.py  gen_benchmarks_tireworld_line.py  gen_benchmarks_tireworld_simplified.py  gen_benchmarks_tireworld_simplified_ground.py  gen_benchmarks_warehouse.py  gen_benchmarks_warehouse_repair.py
benchmarks/robot_coffee_line/: domain.pddl  p10.pddl  p11.pddl  p12.pddl  p13.pddl  p14.pddl  p15.pddl  p16.pddl  p17.pddl  p18.pddl  p19.pddl  p2.pddl  p20.pddl  p21.pddl  p22.pddl  p23.pddl  p24.pddl  p25.pddl  p26.pddl  p27.pddl  p28.pddl  p29.pddl  p3.pddl  p4.pddl  p5.pddl  (+88 more)
examples/: blocksworld.gpp  elevator.gpp  minimal_example.gpp  robot_program.gpp  star_example.gpp  test.ldlf  test.part  triangle_tire_world.gpp
results/: results_blocksworld.csv  results_blocksworld_drop.csv  results_blocksworld_drop2.csv  results_blocksworld_drop3.csv  results_blocksworld_drop_holding.csv  results_dishwasher.csv  results_dishwasher_final.csv  results_dishwasher_move.csv  results_robot_coffee_line.csv  results_tireworld.csv  results_tireworld_carry.csv  results_tireworld_line.csv  results_tireworld_simplified.csv  results_tireworld_simplified_ground.csv  results_warehouse.csv  results_warehouse2.csv  results_warehouse3.csv  results_warehouse_repair.csv  results_warehouse_repair2.csv
scripts/: build.sh  run_blocksworld.sh  run_blocksworld_drop.sh  run_coffee_line.sh  run_dishwasher.sh  run_dishwasher_final.sh  run_dishwasher_move.sh  run_tireworld.sh  run_tireworld_carry.sh  run_tireworld_line.sh  run_tireworld_simplified.sh  run_tireworld_simplified_ground.sh  run_warehouse.sh  run_warehouse_repair.sh
src/: 2main.cpp  3main.cpp  CMakeLists.txt  DFA.cpp  DFA.h  base_golog_synthesizer.cpp  base_golog_synthesizer.h  compositional_golog_synthesizer.cpp  compositional_golog_synthesizer.h  domain.cpp  domain.h  golog_driver.cpp  golog_driver.hpp  golog_lexer.l  golog_parser.y  golog_program.cpp  golog_program.h  golog_program.hpp  guide_stub.c  ldlf_compositional_golog_synthesizer.cpp  ldlf_compositional_golog_synthesizer.h  ldlf_golog_synthesizer.cpp  ldlf_golog_synthesizer.h  lexer.l  main.cpp  node_factory.h  parser.yy  parser_stype.h  program_graph.cpp  program_graph.h  propositional_logic.cpp  propositional_logic.hpp  scanner.hpp  scanner_internal.hpp  sem_cache.h  syft4golog.code-workspace  syntactic_closure.cpp  syntactic_closure.h  trans.c  trans.h  (+5 more)
src/synthesis/header/: Domain.h  FONDSynthesizer.h  SymbolicStateDfa.h  VarMgr.h
src/synthesis/source/: DfaGameSynthesizer.cpp  Domain.cpp  ExplicitStateDfaMona.cpp  FONDSynthesizer.cpp  ReachabilitySynthesizer.cpp  SymbolicStateDfa.cpp  VarMgr.cpp
submodules/: invariant_finder.py  invariant_grounder.py  sas_tasks.py  translate.py
(+902 files in other folders)
